# doodle_bot

./: .gitignore  .python-version  LICENSE  README.md  justfile  requirements.txt  west.yml
app/src/: main.c
cv_software/: README.md  camera.py  requirements.txt
cv_software/app/: __init__.py  bt_link.py  bt_link_serial.py  camera.py  control.py  cv_core.py  geom.py  path_corrections.py  path_parse.py  server.py  smudge_detection.py  utils.py
cv_software/templates/: index.html
cv_software/tests/: test_cv_core.py  testconf.py
docs/: justfile
docs/firmware/: differential_drive_kinematics.md  instruction_parsing.md  navigation.md
docs/firmware/state_machine/: sample.dot  state_machine.dot
docs/state_machine/: state_machine.md
firmware/: .gitignore  README.md  justfile  pwm_test.cpp  simple_test.cpp  test_output_new.txt  test_output_signed.txt  test_servo.conf
firmware/.west/: config  west.yml
firmware/app/: CMakeLists.txt  Kconfig  README.md  prj.conf
firmware/app/boards/: esp32_devkitc_wroom.overlay  esp32s3_devkitc.overlay  esp32s3_devkitc_procpu.overlay  nrf52840dk_nrf52840.overlay  nucleo_f302r8.overlay
firmware/app/dts/bindings/: doodle-servo.yaml  gpio-buzzer.yaml
firmware/app/src/: ble_service.cpp  comms.cpp  comms_thread.cpp  instruction_parser.cpp  main.c  main.cpp  motion_execute.cpp  motion_plan.cpp  navigation.cpp  peripheral_wrappers.cpp  servo_control.cpp  state.c  state_machine.cpp  state_task.cpp
firmware/demo/: demo.conf  prj.conf
firmware/drivers/: CMakeLists.txt  Kconfig  README.md
firmware/drivers/buzzer/: CMakeLists.txt  Kconfig  buzzer.c  melody.c  pwm_buzzer.c
firmware/drivers/dfplayer/: dfplayer.c
firmware/drivers/led/: CMakeLists.txt  Kconfig  led_gpio.c  simple_led.c
firmware/drivers/sensor/example_sensor/: example_sensor.c
firmware/drivers/servo/: CMakeLists.txt  Kconfig  servo.c  servo.h
firmware/drivers/stepper/: CMakeLists.txt  Kconfig  a4988.c  stepper.c
firmware/dts/bindings/: vendor-prefixes.txt
firmware/dts/bindings/sensor/: stepper-driver.yaml
firmware/dts/bindings/servo/: doodle-servo.yaml  doodle_servo.yaml
firmware/dts/bindings/stepper/: doodle,a4988-stepper.yaml  stepper-driver.yaml
firmware/include/: ble_service.h  buzzer.h  comms.h  comms_thread.h  config.h  dfplayer.h  instruction_parser.h  melody.h  motion_execute.h  motion_plan.h  navigation.h  peripheral_wrappers.h  pwm_buzzer.h  runtime_config.h  servo.h  servo_control.h  simple_led.h  state.h  state_machine.h  state_task.h  stepper.h
firmware/navigation_analysis/: navigation_circle.csv
firmware/tests/app/ble_gcode_sender/: calibrate_wheelbase.py  earth.gcode  esap5.gcode  gestup.gcode  main.py  packetlib.py  spiral1.gcode  test.gcode
firmware/tests/app/spec_measurements/: main.py  packetlib.py
firmware/tests/app/state_machine/: CMakeLists.txt
firmware/tests/ble_gcode_sender/: README.md  main.py  packetlib.py  simple_test.gcode
firmware/tests/bluetootth/: send_packets.py  test_ble_command.py
firmware/tests/buzzer/: buzzer_test.cpp
firmware/tests/demo/: CMakeLists.txt  Kconfig  demo.conf  peripheral_demo.cpp
firmware/tests/dfplayer/: CMakeLists.txt  Kconfig  dfplayer_test.cpp  prj.conf
firmware/tests/instruction_parser/: CMakeLists.txt  test_instruction_parser.cpp
firmware/tests/led/: CMakeLists.txt  Kconfig  led_control.cpp  prj.conf
firmware/tests/motion_plan/: CMakeLists.txt  prj.conf  test_motion_plan.cpp
firmware/tests/navigation/: CMakeLists.txt  nav.py  navigation_analyzer.py  plot_results.py  simulate_path.py  test_navigation.cpp
firmware/tests/pwm-buzzer/: CMakeLists.txt  Kconfig  prj.conf  pwm_buzzer_driver_test.cpp
firmware/tests/servo/: CMakeLists.txt  Kconfig  prj.conf  servo_alias_test.cpp  servo_control.cpp
firmware/tests/state_machine/: test_state_machine.cpp
firmware/tests/stepper/: CMakeLists.txt  Kconfig  prj.conf  stepper_control.cpp
firmware/tools/: midi2melody.py
model/: doodle_bot.blend1  doodle_bot.stl
pathfinding/: README.md  graph2path.py  img2graph.py  main.py  path2gcode.py  simulate.py
pathfinding/gcode/: checker.gcode  checker1.gcode  circle3.gcode  circle5.gcode  demo.gcode  earth.gcode  earth3.gcode  earth5.gcode  ece.gcode  esap.gcode  esap3.gcode  esap5.gcode  hole.gcode  manu.gcode  nasa.gcode  nasa3.gcode  nasa5.gcode  noise.gcode  pikachu3.gcode  pikachu5.gcode  purdue.gcode  purdue1.gcode  spiral1.gcode  square.gcode  tom.gcode
pathfinding_algorithm/: img2graph.py
pcb_design/DoodleBot/: #auto_saved_files#  DoodleBot.kicad_pcb  DoodleBot.kicad_prl  DoodleBot.kicad_pro  DoodleBot.kicad_sch  DoodleBot.kicad_sch-bak  Motor Driver, LED, Buzzer Connections.kicad_sch  Power_System.kicad_sch  ~DoodleBot.kicad_pcb.lck  ~DoodleBot.kicad_sch.lck
pcb_design/DoodleBot/DoodleBot-backups/: RF_Module.kicad_sym
pcb_design/DoodleBot/doodlebot_gerber/: DoodleBot-B_Adhesive.gba  DoodleBot-B_Cu.gbl  DoodleBot-B_Mask.gbs  DoodleBot-B_Paste.gbp  DoodleBot-B_Silkscreen.gbo  DoodleBot-Edge_Cuts.gm1  DoodleBot-F_Adhesive.gta  DoodleBot-F_Cu.gtl  DoodleBot-F_Mask.gts  DoodleBot-F_Paste.gtp  DoodleBot-F_Silkscreen.gto  DoodleBot-NPTH.drl  DoodleBot-PTH.drl  DoodleBot-User_Comments.gbr  DoodleBot-User_Drawings.gbr  DoodleBot-User_Eco1.gbr  DoodleBot-User_Eco2.gbr  DoodleBot-job.gbrjob
pcb_design/DoodleBot/doodlebot_project (schematic and pcb)/: DoodleBot.kicad_pcb  DoodleBot.kicad_prl  DoodleBot.kicad_pro  DoodleBot.kicad_sch  external.kicad_sch  mcu.kicad_sch  power.kicad_sch
scripts/: setup.sh
